optimize memory usage
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@43796 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f